...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/an_txt"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_reload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:layout_marginTop="@dimen/comm_gap_10"
        android:layout_marginRight="@dimen/default_horizontal_margin"
        android:text="Reload"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintVertical_bias="0.0"
...
